--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,5 +1,5 @@
 <div
-  class='border-2 text-yellow-200/90 text-sm font-medium px-2.5 py-1 text-center rounded-md mx-auto'
+  class='border-2 text-yellow-200/90 text-sm font-medium px-2.5 py-1 text-center rounded-md mx-auto hover:bg-yellow-500 hover:text-white hover:border-yellow-500 transition-all duration-300 ease-in'
 >
   <div class='text-center flex items-center h-full'>
     <slot />
