Implement header menu with dynamic items and add social links to the homepage

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,66 @@
+---
+interface MenuItem {
+  title: string;
+  path: string;
+}
+
+interface MenuItemProps extends MenuItem {
+  children?: MenuItem[];
+}
+
+const menuitems: MenuItemProps[] = [
+  {
+    title: 'Home',
+    path: '/',
+  },
+  {
+    title: 'About',
+    path: '/about',
+  },
+  {
+    title: 'Projects',
+    path: '/projects',
+  },
+  {
+    title: 'Contact',
+    path: '/contact',
+  },
+];
+
+const { pathname } = Astro.url;
+---
+
 <header class='flex justify-center items-center py-8 w-[1120px]'>
-  <nav class='space-x-4 text-lg opacity-80 font-semibold'>
-    <a href='/'>Home</a>
-    <a href='/about'>About</a>
-    <a href='/services'>Projects</a>
-    <a href='/contact'>Contact</a>
+  <nav class='text-lg opacity-80 font-semibold space-x-4'>
+    {
+      menuitems.map((item) => {
+        const isActive = ['', item.path].find((e) => e === pathname.slice(0))
+          ? 'active'
+          : '';
+
+        return (
+          <a
+            href={item.path}
+            class={`${isActive} text-white/90 hover:text-gray-300 text-center`}
+          >
+            {item.title}
+          </a>
+        );
+      })
+    }
   </nav>
 </header>
+
+<style>
+  .active {
+    color: #fff085;
+    border-radius: 0.375rem;
+    padding: 0.25rem 0.75rem;
+    background-color: rgba(255, 255, 255, 0.1);
+    text-align: center;
+  }
+
+  .navbar-hidden {
+    transform: translateY(-150%);
+  }
+</style>
